# tconf

./: CMakeLists.txt  README.md
src/: tconf.c  tconf.h
tests/: CMakeLists.txt  configure.in.h  new_file_parser_reference_is_valid.c  new_setting_reference_is_valid.c  new_string_parser_reference_is_valid.c  parsing_empty_file_returns_status_end.c  testing.h
tests/data/: simpleproperty.conf
